--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ div.wrapper {
   color: #fff;
   text-decoration: none;
 }
-
+/*Date*/
 .date-section {
   color: #fff;
 }
@@ -96,13 +96,14 @@ div.wrapper {
   margin: 4px;
 }
 
-/* signup */
+/*SignUp*/
 @media (max-width: 539px) {
   .mybtn2 {
     width: 100%;
   }
 }
 
+/*Error message*/
 .error-msg {
   color: red;
   width: 100%;
@@ -110,12 +111,13 @@ div.wrapper {
   font-weight: 600;
 }
 
+/*Welcome messsage*/
 .welcome-div {
   color: #fff;
   letter-spacing: 0.09em;
 }
 
-/* todo */
+/*todo*/
 .todo {
   background-color: #e4e4e4;
   font-weight: 600;
@@ -152,6 +154,7 @@ div.wrapper {
   cursor: pointer;
 }
 
+/*Modal Container*/
 .modal-container {
   width: 100%;
   height: 100vh;
@@ -201,10 +204,12 @@ div.wrapper {
   cursor: pointer;
 }
 
+/*Status*/
 .status {
   padding: 10px;
 }
 
+/*Expected date*/
 .expectdate {
   margin-left: auto;
   width: 120px;
